resources/drone/server-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: drone-server
  namespace: drone
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: drone-server
        service: drone
    spec:
      containers:
      - image: drone/drone:latest
        imagePullPolicy: Always
        name: drone-server
        ports:
        - containerPort: 8000
          protocol: TCP
        - containerPort: 9000
          protocol: TCP
        volumeMounts:
          # Persist our configs in an SQLite DB in here
          - name: drone-server-db
            mountPath: /var/lib/drone
          # Enables Docker in Docker
          - name: docker-socket
            mountPath: /var/run/docker.sock
        resources:
          requests:
            cpu: 40m
            memory: 32Mi
      volumes:
        - name: drone-server-db
          gcePersistentDisk:
            pdName:  drone-server-db
            fsType: ext4
        - name: docker-socket
          hostPath:
            path: /var/run/docker.sock
