resources/drone/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drone-service
  namespace: drone
  labels:
    app: drone-server
    service: drone
spec:
  type: NodePort
  ports:
  - name: "http"
    port: 8000
    targetPort: 8000
  - name: "grpc"
    port: 9000
    targetPort: 9000
  selector:
    app: drone-server
    service: drone
